feat: add password recovery routes
